# I-Sound-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  opus.lib
.github/workflows/: cmake.yml
Libraries/: CMakeLists.txt
Source/: CMakeLists.txt  ErrorList.h  SoundData.h
Source/AudioFormats/: OpusDecoderWrapper.cpp  OpusDecoderWrapper.h  OpusEncoderWrapper.cpp  OpusEncoderWrapper.h  OpusHeader.h  WavFile.cpp  WavFile.h
Source/AudioPackage/: CMakeLists.txt  PackageDecoder.cpp  PackageDecoder.h  PackageEncoder.cpp  PackageEncoder.h
Source/AudioPackage/ctest/: CMakeLists.txt
Source/Containers/: CMakeLists.txt  SoundContainer.h  WavContainer.h  WavFile.cpp  WavFile.h  WavHeader.h
Source/Containers/ctest/: CMakeLists.txt  TestWav.cpp  WavTest.cpp
Source/Filters/: CMakeLists.txt  OpusContainer.h  SoundContainer.h  WavContainer.h
Source/Filters/ctest/: CMakeLists.txt  TestWav.cpp
Source/IO/: IOUtility.h  MemoryMappedFile.h
Source/IO/Linux/: IOUtilityLinux.cpp  MemoryMappedFileLinux.cpp
Source/IO/Win32/: IOUtilityWin32.cpp  MemoryMappedFileWin32.cpp
Source/Parsers/: CMakeLists.txt  OpusDecoderWrapper.cpp  OpusDecoderWrapper.h  OpusEncoderWrapper.cpp  OpusEncoderWrapper.h  OpusFile.cpp  OpusFile.h  OpusHeader.h  WavFile.cpp  WavFile.h
Testing/: BenchmakrDirver.cpp  BenchmarkDriver.cpp  CMakeLists.txt  TestDriver.cpp
Testing/Modules/: ContainerModule.cpp  ContainerModule.h  PackageModule.cpp  PackageModule.h
Testing/TestFiles/: 16_bit_reaper.opus
